@@ -9,7 +9,6 @@ import cotato.growingpain.common.exception.ErrorCode;
 import cotato.growingpain.member.domain.entity.Member;
 import cotato.growingpain.member.repository.MemberRepository;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
@@ -59,7 +58,7 @@ public class CommentLikeService {
 
         return commentLikes.stream()
                 .map(CommentLike::getComment)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private Comment findCommentId(Long commentId) {
